--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -33,7 +33,7 @@ footer {
   
 }
 #propic{width: 300px; height: 300px;
-border-radius: 20%;
+border-radius: 60%;
 border: 5px solid ; color: chartreuse;}
 .icons{
   width: 6rem;
@@ -46,12 +46,17 @@ border: 5px solid ; color: chartreuse;}
   display: flex;
 }
 #content{ 
-  display: flex;
+  list-style-type: none;
 }
  .aquamarine-h2{ 
     color: rgb(255, 238, 0);
   }
 
 
+#start{
+  color: darkgoldenrod;
+}
+
+.li{ list-style-type: none;}
 
 
