--- a/animationlogo.html/css/animation.css
+++ b/animationlogo.html/css/animation.css
@@ -8,11 +8,24 @@
 
 /* The element to apply the animation to */
 div {
-  width: 100px;
-  height: 100px;
+  width: 20px;
+  height: 20px;
   background-color: rgb(0, 51, 255);
   animation-name: animatedSquare;
   animation-duration: 4s;
   animation-iteration-count: infinite; 
   border-radius: 40%;   
 } 
+img{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 4px blue;
+  width:200px ;
+  height: 200px;
+  background: rgb(0, 51, 255);
+  animation-name: animatedSquare;
+  animation-duration: 4s;
+  animation-iteration-count: infinite; 
+  border-radius: 40%;
+}
